Add support for aliases referring to data streams.
This is a WIP.

Aliases to data streams can be defined on composable index templates
and via the update aliases api. Aliases can either only refer to
data streams or to indices.

Aliases for data streams are stored independently from data streams and
are stored in `DataStreamMetadata`. This has the benefit when backing
indices are removed from data streams then data stream aliases don't
need to be updated.

In this WIP, the authorization model is different than for regular aliases.
Whether authorization for using a data stream is granted depends on whether
the user is authorized to use the data streams the data stream alias refers to.
An alias can refer to multiple data streams, so depending on the granted
privileges, an data stream alias may resolve to a subset of the data streams.

Closes #66163